# rtd-redirects

./: .travis.yml  LICENSE  README.rst  pyproject.toml  rtd_redirects.py  setup.cfg  setup.py
.github/workflows/: main.yml  semantic-release.yml
